--- a/src/index.html
+++ b/src/index.html
@@ -32,12 +32,24 @@
           comfortably at an price</a>.
         </p>
       </section>
-      <section class="products">
-        <h2>Top Products</h2>
-        <ul class="product-list">
-          
-        </ul>
-      </section>
+      <div id="categories-grid">
+        <a class="category" href="product-listing/index.html?category=tents" alt="product listing">
+            <img src="/images/noun_Tent_3544767.svg" alt="Tent Icon from Noun Project: Mustofa Bayu">
+            <p>Tents</p>
+        </a>
+        <a class="category" href="product-listing/index.html?category=backpacks" alt="product listing">
+            <img src="/images/noun_carrier bag_3544771.svg" alt="Backpack Icon from Noun Project: Mustofa Bayu">
+            <p>Backpacks</p>
+        </a>
+        <a class="category" href="product-listing/index.html?category=sleeping-bags" alt="product listing">
+            <img src="/images/noun_Sleeping Bag_3544775.svg" alt="Sleeping Bag Icon from Noun Project: Mustofa Bayu">
+            <p>Sleeping Bags</p>
+        </a>
+        <a class="category" href="product-listing/index.html?category=hammocks" alt="product listing">
+            <img src="/images/noun_Hammock_791143.svg" alt="Hammock Icon from Noun Project: Paul Richard">
+            <p>Hammocks</p>
+        </a>
+      </div>
     </main>
     <footer id="main-footer"></footer>
   </body>
