Core and step1 stretch ready

--- a/src/index.html
+++ b/src/index.html
@@ -34,15 +34,36 @@
         <form id="product-search">
           <fieldset>
             <label for="product">Product: </label>
-            <input type="text" name="product" id="product"><br>
+            <input type="text" name="product" id="product" /><br />
             <div id="category-radio">
-              <input type="radio" id="tents" name="category" value="tents" checked>
-              <label for="tents">Tents</label><br>
-              <input type="radio" id="backpacks" name="category" value="backpacks">
-              <label for="backpacks">Backpacks</label><br>
-              <input type="radio" id="sleeping-bags" name="category" value="sleeping-bags">
+              <input
+                type="radio"
+                id="tents"
+                name="category"
+                value="tents"
+                checked
+              />
+              <label for="tents">Tents</label><br />
+              <input
+                type="radio"
+                id="backpacks"
+                name="category"
+                value="backpacks"
+              />
+              <label for="backpacks">Backpacks</label><br />
+              <input
+                type="radio"
+                id="sleeping-bags"
+                name="category"
+                value="sleeping-bags"
+              />
               <label for="sleeping-bags">Sleeping Bags</label>
-              <input type="radio" id="hammocks" name="category" value="hammocks">
+              <input
+                type="radio"
+                id="hammocks"
+                name="category"
+                value="hammocks"
+              />
               <label for="hammocks">Hammocks</label>
             </div>
           </fieldset>
@@ -91,6 +112,5 @@
       </section>
     </main>
     <footer id="main-footer"></footer>
-    
   </body>
 </html>
