completed Individual Activity W04 - Rama

--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -20,9 +20,7 @@
         <h2>Review & Place your Order</h2>
       </section>
 
-      <div id="orderPlacementMessage" class="error-message"></div>
-
-      <form name="checkout">
+      <form name="checkout" class="checkout">
         <fieldset>
           <legend>Customer</legend>    
           <label for="fname">First Name:</label>
