--- a/src/product-listing/index.html
+++ b/src/product-listing/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sleep Outside | Product Listing</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="../js/product-listing.js" type="module"></script>
-  </head>
-  <body>
-    <header class="divider" id="main-header"></header>
-    <main class="divider">
-      <section class="products">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sleep Outside | Product Listing</title>
+  <link rel="stylesheet" href="/css/style.css" />
+  <script src="../js/product-listing.js" type="module"></script>
+</head>
+
+<body>
+  <header class="divider" id="main-header"></header>
+  <main class="divider">
+    <section class="products">
+      <div class="list-title">
         <h2>Top Products <span class="title"></span></h2>
-        <ul class="product-list"></ul>
-      </section>
-    </main>
-    <footer id="main-footer"></footer>
-  </body>
+        <select class="controls">
+          <option value="name" selected>Name</option>
+          <option value="price">Price</option>
+        </select>
+      </div>
+
+
+      <ul class="product-list"></ul>
+    </section>
+  </main>
+  <footer id="main-footer"></footer>
+</body>
+
 </html>
